// - **Возможность пользователю просматривать список товаров**
// - **Возможность просматривать определенный товар**
// - **Возможность добавлять товар к корзину, удалять товар из корзины или изменять количество товара.**
// - **Возможность показать товары в корзине**
// - **Возможность оформить заказ и отменить**
syntax = "proto3";

package shop;

option go_package = "./shop";

import "google/protobuf/empty.proto";

import "google/protobuf/timestamp.proto";


service ShopService{
    rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
    rpc GetProduct(GetProductRequest) returns (Product);
    rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse);
    rpc UpdateProduct (UpdateProductRequest) returns (UpdateProductResponse);
    rpc DeleteProduct (DeleteProductRequest) returns (google.protobuf.Empty);
}

message ListProductsRequest {
    uint64 limit = 1;
    uint64 offset = 2;
    string query = 3;
}

message GetProductRequest {
    uint64 id = 1;
}


message ListProductsResponse {
    uint64 count = 1;
    repeated Product items = 2; 
}

message Product {
    uint64 id = 1;
    string name = 2;
    uint64 price = 3;
    string description = 4;
    uint64 count = 5;
}

message User {
    uint64 id = 1;
    string name = 2;
    string surname = 3;
    string phone = 4;
    string login = 5;
    string password_hash = 6;
    string role = 7;
    string address = 8;
    float coordinate_address_x = 9;
    float coordinate_address_y = 10;
}

message Basket {
    uint64 id = 1;
    uint64 user_id = 2;
    uint64 product_id = 3;
    uint64 count = 4;
}

message AddProductRequest {
    uint64 user_id = 1;
    uint64 product_id = 2;
    uint64 count = 3;
}

message AddProductResponse {
    uint64 id = 1;
}

message UpdateBasketRequest {
    uint64 user_id = 1;
    uint64 product_id = 2;
    uint64 count = 3;
}

message DeleteBasketProductRequest {
    uint64 user_id = 1;
    uint64 product_id = 2;
}

message GetBasketsRequest {
    uint64 user_id = 1;
}

message GetBasketsResponse {
    repeated Basket items = 1;
}

message OrderItem {
    string product = 1;
    uint64 count = 2;
    uint64 total = 3;
}

message Order {
    uint64 id = 1;
    uint64 user_id = 2;
    string address = 3;
    float coordinate_address_x = 4;
    float coordinate_address_y = 5;
    float coordinate_point_x = 6;
    float coordinate_point_y = 7;
    google.protobuf.Timestamp created_at = 8;
    google.protobuf.Timestamp started_at = 9;
    google.protobuf.Timestamp delivery_at = 10;
    uint64 courier_id = 11;
    uint64 delivery_status = 12;
}

message CreateOrderRequest {
    uint64 user_id = 1;
}

message CreateOrderResponse {
    uint64 id = 1;
}

message DeleteOrderRequest {
    uint64 id = 1;
}

service BasketService {
    rpc AddProduct(AddProductRequest) returns (AddProductResponse);
    rpc UpdateBasket(UpdateBasketRequest) returns (Basket);
    rpc GetBasket(GetBasketsRequest) returns (GetBasketsResponse);
    rpc DeleteBasketProduct(DeleteBasketProductRequest) returns (google.protobuf.Empty);
}

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
    rpc DeleteOrder(DeleteOrderRequest) returns (google.protobuf.Empty);
}

message CreateProductRequest {
    string name = 1;
    uint64 price = 2;
    string description = 3;
    uint64 count = 4;
}


message CreateProductResponse {
    uint64 id = 1;
}


message UpdateProductRequest {
    uint64 id = 1;
    string name = 2;
    uint64 price = 3;
    string description = 4;
    uint64 count = 5;
}

message UpdateProductResponse {
    uint64 id = 1;
}

message DeleteProductRequest {
    uint64 id = 1;
}


service UserService {
    rpc AddUser(AddUserRequest) returns (AddUserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (User);
    rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
    rpc DeleteUser(DeleteUserRequest) returns(google.protobuf.Empty);
}


message ListUsersRequest {
    repeated uint64 user_ids = 1;
}

message ListUsersResponse {
    repeated User items = 1;
}

message AddUserRequest {
    string name = 1;
    string surname = 2;
    string phone = 3;
    string login = 4;
    string password_hash = 5;
    string role = 6;
    string address = 7;
    float coordinate_address_x = 8;
    float coordinate_address_y = 9;
}

message AddUserResponse {
    uint64 id = 1;
}

message UpdateUserRequest {
    uint64 id = 1;
    string name = 2;
    string surname = 3;
    string phone = 4;
    string login = 5;
    string password_hash = 6;
    string role = 7;
    string address = 8;
    float coordinate_address_x = 9;
    float coordinate_address_y = 10;
}

message DeleteUserRequest {
    uint64 id = 1;
}